--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
