homework-final-project

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic"
       rel="stylesheet"
     />
+    <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
